--- a/.github/workflows/google-cloudrun-source.yml
+++ b/.github/workflows/google-cloudrun-source.yml
@@ -36,7 +36,7 @@ on:
 
 env:
   REGION: 'us-central1' # TODO: update to your region
-  SERVICE: 'express-typescript-github-actions' # TODO: update to your service name
+  SERVICE: 'demo-actions' # TODO: update to your service name
 
 jobs:
   deploy:
@@ -50,10 +50,12 @@ jobs:
       - name: 'Checkout'
         uses: 'actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332' # actions/checkout@v4
 
-      # Configure Workload Identity Federation and generate an access token.
-      #
-      # See https://github.com/google-github-actions/auth for more options,
-      # including authenticating via a JSON credentials file.
+      - name: 'Display Secrets'
+        run: |
+          echo "PROJECT_ID: ${{ secrets.PROJECT_ID }}"
+          echo "WORKLOAD_IDENTITY_PROVIDER: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}"
+          echo "SERVICE_ACCOUNT : ${{ secrets.SERVICE_ACCOUNT }}"
+
       - id: 'auth'
         name: 'Authenticate to Google Cloud'
         uses: 'google-github-actions/auth@f112390a2df9932162083945e46d439060d66ec2' # google-github-actions/auth@v2
@@ -61,7 +63,7 @@ jobs:
           project_id: '${{ secrets.PROJECT_ID }}'
           workload_identity_provider: '${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}' # TODO: replace with your workload identity provider
           service_account: '${{ secrets.SERVICE_ACCOUNT }}' 
-        
+
       - name: 'Deploy to Cloud Run'
         uses: 'google-github-actions/deploy-cloudrun@33553064113a37d688aa6937bacbdc481580be17' # google-github-actions/deploy-cloudrun@v2
         with:
