--- a/.github/workflows/google-cloudrun-source.yml
+++ b/.github/workflows/google-cloudrun-source.yml
@@ -64,7 +64,12 @@ jobs:
         env:
           GOOGLE_APPLICATION_CREDENTIALS: ${{ steps.auth.outputs.credentials_file_path }}
         run: |
-          gcloud auth list 
+          # Activate the service account using the credentials file
+          gcloud auth activate-service-account --key-file="$GOOGLE_APPLICATION_CREDENTIALS"
+          # Now you can list the authenticated accounts
+          gcloud auth list
+          # You can also verify the current configuration
+          gcloud config list
 
 
       - name: 'Deploy to Cloud Run'
