--- a/.github/workflows/google-cloudrun-source.yml
+++ b/.github/workflows/google-cloudrun-source.yml
@@ -59,20 +59,8 @@ jobs:
           service_account: '${{ secrets.SERVICE_ACCOUNT }}' 
           create_credentials_file: true
 
-      # Example of using the token in another step
-      - name: 'Use Access Token'
-        env:
-          GOOGLE_APPLICATION_CREDENTIALS: ${{ steps.auth.outputs.credentials_file_path }}
-        run: |
-          # Activate the service account using the credentials file
-          gcloud auth activate-service-account --key-file="$GOOGLE_APPLICATION_CREDENTIALS"
-          # Now you can list the authenticated accounts
-          gcloud auth list
-          # You can also verify the current configuration
-          gcloud config list
-
-
-      - name: 'Deploy to Cloud Run'
+      - id : 'deploy'
+        name: 'Deploy to Cloud Run'
         uses: 'google-github-actions/deploy-cloudrun@33553064113a37d688aa6937bacbdc481580be17' # google-github-actions/deploy-cloudrun@v2
         with:
           service: '${{ env.SERVICE }}'
